unit tests added